--- a/snow.env
+++ b/snow.env
@@ -1,4 +1,4 @@
 SNOWFLAKE_USER="RYGN_DT_LVELASQUEZ"
 SNOWFLAKE_PRIVATE_KEY_PATH="~/rygn_dt_lvelasquez_rsa_key.p8"
 SNOWFLAKE_ACCOUNT="SH72806"
-SNOWFLAKE_REGION="AWS_US_EAST_2"
+SNOWFLAKE_REGION="us-east-2.aws"
